--- a/iniciovistagerente.html
+++ b/iniciovistagerente.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/nav.css">
     <link rel="stylesheet" href="styles/footer.css">
     <script src="https://kit.fontawesome.com/e87692bdd7.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/styles/despachos.css">
+    <link rel="stylesheet" href="styles/despachos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -18,8 +18,8 @@
             <nav class="main-nav">
                 <ul class="list-main-nav">
                     <li class="nav-item"><a href="iniciovistagerente.html">Inicio</a></li>
-                    <li class="nav-item"><a href="inventarios.html">Inventarios</a></li>
-                    <li class="nav-item" id="sign-up"><a href="reservaslogin.html">Reservas</a></li>
+                    <li class="nav-item"><a href="inventariosg.html">Inventarios</a></li>
+                    <li class="nav-item" id="sign-up"><a href="reservasloging.html">Reservas</a></li>
                     <a href="index.html" class="icons-nav">
                         <i class="fa-solid fa-right-to-bracket"></i>
                     </a> 
