--- a/inventarios.html
+++ b/inventarios.html
@@ -1,30 +1,10 @@
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Despachos</title>
+    <title>Inventarios</title>
     <link rel="stylesheet" href="styles/inventarios.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -68,7 +48,7 @@
                                     <a href="#editoEmployeeModal" class="btn btn-secondary" data-toggle="modal"><i class="fa-solid fa-circle-plus"></i> <span>Añadir nuevo producto</span></a>
                                 </div>
 								<div class="buscar">
-									<input type="text" class="form-control" id="myInput" onkeyup="myFunction()" placeholder="Busca la entrega...">
+									<input type="text" class="form-control" id="myInput" onkeyup="myFunction()" placeholder="Busca el producto...">
 								</div>						
 							</div>
 						</div>
@@ -365,20 +345,31 @@
 		<div class="modal-content">
 			<div class="signup-form">
 				<form action="/examples/actions/confirmation.php" method="post">
-					<h2>Agregar Entrega</h2>
-					<p>Agregue datos de la nueva entrega</p>
-					<hr>
+					<h2>Editar Producto</h2>
+					<p>Editar datos del producto</p>
 					<div class="form-group">
-						<div class="row">
-							<div class="col"><input type="text" class="form-control" name="first_name" placeholder="Nombre cliente" required="required"></div>
-							<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Apellido cliente" required="required"></div>
-						</div>        	
+						<input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
 					</div>
 					<div class="form-group">
-						<input type="text" class="form-control" name="first_name" placeholder="Direccion de la entrega"required="required">
+						<select type="text" class="form-control" id="categoria" placeholder="Categoria" required>
+						<option value="value0">Categoria</option>
+						<option value="value1">categoria 1</option>
+						<option value="value1">categoria 2</option>
+						<option value="value1">categoria 3</option>
+						<option value="value1">categoria 4</option>
+						<option value="value1">categoria 5</option>
+						<option value="value1">categoria 6</option>
+						<option value="value1">categoria 7</option>
+					  </select>
 					</div>
 					<div class="form-group">
-						<input type="date" class="form-control" id="start" name="trip-start">
+						<input type="text" class="form-control" name="marca" placeholder="Marca" required="required">
+					</div>
+					<div class="form-group">
+						<input type="date" class="form-control" name="Fecha" placeholder="Fecha de Entrega" min="2022-04-01" max="2022-05-5">
+					</div>
+					<div class="form-group">
+						<input type="text" class="form-control" name="cantidad" placeholder="Cantidad" required="required">
 					</div>
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
@@ -396,11 +387,11 @@
 			<div class="modal-content">
 				<form>
 					<div class="modal-header">						
-						<h4 class="modal-title ">Eliminar Entrega</h4>
+						<h4 class="modal-title ">Eliminar Producto</h4>
 						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
 					</div>
 					<div class="modal-body">					
-						<p>¿Deseas elminar esta entrega?</p>
+						<p>¿Deseas elminar este producto?</p>
 						<p ><small>Esta accion no se puede deshacer</small></p>
 					</div>
 					<div class="modal-footer">
@@ -418,7 +409,6 @@
 					<form action="" method="post">
 						<h2>Agregar Producto</h2>
 						<p>Agregue datos del producto</p>
-						<hr>
                         <div class="form-group">
                             <input type="text" class="form-control" name="nombrep" placeholder="Nombre Producto" required="required">
                         </div>
