--- a/proveedores.html
+++ b/proveedores.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proveedores</title>
-    <link rel="stylesheet" href="styles/despachos.css">
+    <link rel="stylesheet" href="styles/proveedor.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+	<script src="/script/Despacho.js"></script>
 	<script src="https://kit.fontawesome.com/1d159cd404.js" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -35,157 +36,222 @@
     </div>
 </header>
 	<main class="main">
-	<div class="container-xl">
-		<div class="table-responsive">
-			<div class="table-wrapper">
-				<div class="table-title">
+		<div class="container-xl">
+				<div class="titulo">
 					<div class="row">
 						<div class="col-sm-5">
-							<h2><b>Proveedores</b></h2>
+							<h2><b>Proveedor</b></h2>
 						</div>
 						<div class="col-sm-7">
-							<a href="#editoEmployeeModal" class="btn btn-secondary" data-toggle="modal"><i class="fa-solid fa-circle-plus"></i> <span>Añadir nuevo Proveedor</span></a>
-							<a class="btn btn-primary" href="/404.html" role="button">Generar reporte</a>
-							<div class="btn-group" data-toggle="buttons">
-							
+							<div  class="btn-group" data-toggle="buttons">
+								<div class="agregar">
+                                    <a href="#editoEmployeeModal" class="btn btn-secondary" data-toggle="modal"><i class="fa-solid fa-circle-plus"></i> <span>Añadir nuevo Proveedor</span></a>
+                                </div>
+								<div class="buscar">
+									<input type="text" class="form-control" id="myInput" onkeyup="myFunction()" placeholder="Busca el proveedor...">
+								</div>
+								<label class="btn btn-info active">
+									<input type="radio" name="status" value="all" checked="checked">Todos
+								</label>
 								<label class="btn btn-success">
-									<input type="radio" name="status" value="active">Activo
+									<input type="radio" name="status" value="Activo">Activo
 								</label>
 								<label class="btn btn-danger">
-									<input type="radio" name="status" value="expired">Bloqueado
+									<input type="radio" name="status" value="Bloqueado">Bloqueado
 								</label>							
-							</div>						
+							</div>
 						</div>
 					</div>
 				</div>
-				<table class="table table-striped table-hover">
+				<table id="myTable" class="table table-striped table-hover">
 					<thead>
-						<tr>
+						<tr >
 							<th>ID</th>
 							<th>Tipo Proveedor</th>
 							<th>Nombres</th>
 							<th>Apellidos</th>
-                            <th>Email</th>
-                            <th>Numero Celular</th>
+							<th>Email</th>
+							<th>Telefono</th>
 							<th>Estado</th>
 							<th>Edit/Delete</th>
 						</tr>
 					</thead>
 					<tbody>
-						<tr>
+						<tr data-status="Activo">
 							<td>1</td>
 							<td>Material P.O.P</td>
-							<td>Sergio Stevens</td>                        
-							<td>Chisica Cruz </td>
-                            <td>sschisica@misena.edu.co</td>
-                            <td>3219663808</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
 							<td><span class="status text-success">&bull;</span> Activo </td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr>
+						<tr data-status="Activo">
 							<td>2</td>
 							<td>Productos</td>
-							<td>Sergio Stevens</td>                        
-							<td>Chisica Cruz </td>
-                            <td>sschisica@misena.edu.co</td>
-                            <td>3219663808</td>
-							<td><span class="status text-success">&bull;</span> Activo</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-success">&bull;</span> Activo </td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr>
+						<tr data-status="Bloqueado">
 							<td>3</td>
 							<td>Mobiliario</td>
-							<td>Sergio Stevens</td>                        
-							<td>Chisica Cruz </td>
-                            <td>sschisica@misena.edu.co</td>
-                            <td>3219663808</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
 							<td><span class="status text-danger">&bull;</span> Bloqueado </td>                      
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>                        
 						</tr>
-						<tr>
+						<tr data-status="Activo">
 							<td>4</td>
 							<td>Distribuidor Nacional</td>
-							<td>Sergio Stevens</td>                        
-							<td>Chisica Cruz </td>
-                            <td>sschisica@misena.edu.co</td>
-                            <td>3219663808</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
 							<td><span class="status text-success">&bull;</span> Activo</td>
 							<td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
 							</td>
 						</tr>
-						<tr>
+						<tr data-status="Activo">
 							<td>5</td>
-							<td>Mobiliario</td>
-							<td>Sergio Stevens</td>                        
-							<td>Chisica Cruz </td>
-                            <td>sschisica@misena.edu.co</td>
-                            <td>3219663808</td>
-							<td><span class="status text-danger">&bull;</span> Bloqueado </td>                      
-							<td>
+							<td>Distribuidor Nacional</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-success">&bull;</span> Activo </td>
+						    <td>
 								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
 								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
-							</td>                        
+							</td>
 						</tr>
+						<tr data-status="Bloqueado">
+							<td>6</td>
+							<td>Mobiliario</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-danger">&bull;</span>Bloqueado </td>
+						    <td>
+								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
+								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
+							</td>
+						</tr>
+						<tr data-status="Bloqueado">
+							<td>7</td>
+							<td>Material P.O.P</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-danger">&bull;</span> Bloqueado</td>
+						    <td>
+								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
+								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
+							</td>
+						</tr>
+						<tr data-status="Bloqueado">
+							<td>8</td>
+							<td>Productos</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-danger">&bull;</span> Bloqueado </td>
+						    <td>
+								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
+								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
+							</td>
+						</tr>
+						<tr data-status="Activo">
+							<td>9</td>
+							<td>Productos</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-success">&bull;</span> Activo </td>
+						    <td>
+								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
+								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
+							</td>
+						</tr>				
+						<tr data-status="Activo">
+							<td>10</td>
+							<td>Material P.O.P</td>
+							<td>Nombre 1 nombre2</td>
+							<td>apellido1 apellido2</td>
+							<td>ejemplo@gmail.com</td>
+							<td>123456789</td>
+							<td><span class="status text-success">&bull;</span> Activo </td>
+						    <td>
+								<a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa-solid fa-pen-to-square" data-toggle="tooltip" title="Edit"></i></a>
+								<a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa-solid fa-trash" data-toggle="tooltip" title="Delete"></i></a>
+							</td>
+						</tr>				
 					</tbody>
 				</table>
-				<div class="clearfix">
-					<div class="hint-text"></div>
-					<ul class="pagination">
-						<li class="page-item disabled"><a href="#">Anterior</a></li>
-						<li class="page-item active"><a href="#" class="page-link">1</a></li>
-						<li class="page-item"><a href="#" class="page-link">2</a></li>
-						<li class="page-item"><a href="#" class="page-link">3</a></li>
-						<li class="page-item"><a href="#" class="page-link">4</a></li>
-						<li class="page-item"><a href="#" class="page-link">5</a></li>
-						<li class="page-item"><a href="#" class="page-link">Siguiente</a></li>
-					</ul>
+				<div class="Generar">
+					<button class="btn btn-light" value="" onclick="exportTableToExcel('myTable')">Generar Reporte</button>
 				</div>
 			</div>
-		</div>
-	</div>
-	<div id="editEmployeeModal" class="modal fade">
+
+<!-- Edit -->
+<div id="editEmployeeModal" class="modal fade">
 	<div class="modal-dialog">
 		<div class="modal-content">
 			<div class="signup-form">
 				<form action="/examples/actions/confirmation.php" method="post">
 					<h2>Editar Proveedor</h2>
-					<p>Editar datos de Proveedor</p>
+					<p>Editar datos de proveedor</p>
 					<hr>
 					<div class="form-group">
-						<div class="row">
-							<div class="col"><input type="text" class="form-control" name="first_name" placeholder="Nombres " required="required"></div>
-							<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Apellidos " required="required"></div>
-						</div>        	
+						<div class="form-group">
+							<select type="text" class="form-control" id="proveedor" placeholder="Proveedor" required>
+							    <option value="value0">Tipo Proveedor</option>
+								<option value="value1">Material P.O.P</option>
+								<option value="value1">Mobiliario</option>
+								<option value="value1">Productos</option>
+								<option value="value1">Distribuidor Nacional</option>
+							</select>   
+						</div> 
+						<div class="form-group">
+                            <input type="text" class="form-control" name="Nombres" placeholder="Nombres" required="required">
+                        </div>
+						<div class="form-group">
+                            <input type="text" class="form-control" name="Apellidos" placeholder="Apellidos" required="required">
+                        </div>
+						<div class="form-group">
+							<input type="email" class="form-control" name="email" placeholder="Email" required="required">
+						</div>
+						<div class="form-group">
+							<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
+						</div>
+						<select type="text" class="form-control" id="estado" placeholder="Estado" required>
+							<option value="value0">Estado</option>
+							<option value="value1">• Activo</option>
+							<option value="value1">• Bloqueado</option>
+						</select>   						
 					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" name="first_name" placeholder="Email"required="required">
-					</div>
-					<div class="form-group">
-						<input type="text" class="form-control" name="first_name" placeholder="Celular"required="required">
-					</div>
-                    <div class="form-group"><select class="form-control" name="first_name" placeholder="Email"required="required">
-                        <option value=""> ESTADO</option>
-                        <option value="ACTIVO">◉ ACTIVO</option>
-                        <option value="BLOQUEADO">◉	BLOQUEADO</option>
-                    </select></div>
-                    <div class="form-group"><select class="form-control" name="first_name" placeholder="Email"required="required">
-                        <option value=""> TIPO</option>
-                        <option value="PRODUCTOS">◉ PRODUCTOS</option>
-                        <option value="DISTRIBUIDOR NACIONAL">◉	DISTRIBUIDOR NACIONAL</option>
-                        <option value="MATERIAL P.O.P">◉ MATERIAL P.O.P</option>
-                        <option value="MOBILIARIO">◉ MOBILIARIO</option>
-                    </select></div>
+					
 					<div class="modal-footer">
 						<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
 						<input type="submit" class="btn btn-danger" value="Agregar">
@@ -195,6 +261,8 @@
 		</div>
 	</div>
 </div>
+
+<!-- Delete -->
 	<div id="deleteEmployeeModal" class="modal fade">
 		<div class="modal-dialog">
 			<div class="modal-content">
@@ -221,29 +289,33 @@
 				<div class="signup-form">
 					<form action="" method="post">
 						<h2>Agregar Proveedor</h2>
-						<p>Agregue datos de nuevo proveedor</p>
-						<hr>
+						<p>Agregue datos del proveedor</p>
 						<div class="form-group">
-							<div class="row">
-								<div class="col">
-									<input type="text" class="form-control" name="first_name" placeholder="Nombres" required="required">
-								</div>
-								<div class="col"><input type="text" class="form-control" name="last_name" placeholder="Apellidos" required="required"></div>
-							</div>        	
-						</div>
+							<select type="text" class="form-control" id="proveedor" placeholder="Proveedor" required>
+							    <option value="value0">Tipo Proveedor</option>
+								<option value="value1">Material P.O.P</option>
+								<option value="value1">Mobiliario</option>
+								<option value="value1">Productos</option>
+								<option value="value1">Distribuidor Nacional</option>
+							</select>   
+						</div>   	
+						<div class="form-group">
+                            <input type="text" class="form-control" name="Nombres" placeholder="Nombres" required="required">
+                        </div>
+						<div class="form-group">
+                            <input type="text" class="form-control" name="Apellidos" placeholder="Apellidos" required="required">
+                        </div>
 						<div class="form-group">
 							<input type="email" class="form-control" name="email" placeholder="Email" required="required">
 						</div>
 						<div class="form-group">
-							<input type="password" class="form-control" name="Telefono" placeholder="Telefono" required="required">
+							<input type="tel" class="form-control" name="Telefono" placeholder="Telefono" required="required">
 						</div>
-						<div class="form-group">
-							<select type="text" class="form-control" id="inputPhone" placeholder="Tipo producto" required>
-								<option value="value1">Proveedor 1</option>
-								<option value="value2">Proveedor 2</option>
-								<option value="value3">Proveedor 3</option>
-							</select>
-						</div>
+						<select type="text" class="form-control" id="estado" placeholder="Estado" required>
+							<option value="value0">Estado</option>
+							<option value="value1">• Activo</option>
+							<option value="value1">• Bloqueado</option>
+						</select>   
 						<div class="modal-footer">
 							<input type="button" class="btn btn-primary" data-dismiss="modal" value="Cancelar">
 							<input type="submit" class="btn btn-danger" value="Agregar">
@@ -252,8 +324,7 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	
+	</div>	
 </main>    
 </body>
 </html>
